--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project-subsection">
-                <h3 class="project-subheading">Highlight Projects done in Office</h3>
+                <h3 class="project-subheading">Impactful Projects Delivered at Work</h3>
                 <div class="project-grid">
                     <!-- Office Projects -->
                     <div class="project-card" data-project="office1">
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="project-subsection">
-                <h3 class="project-subheading">Highlight Projects done by Myself for Self-Learning</h3>
+                <h3 class="project-subheading">Passion Projects & Personal Growth</h3>
                 <div class="project-grid">
                     <!-- Self-Learning Projects -->
                     <div class="project-card" data-project="self1">
