--- a/index.html
+++ b/index.html
@@ -98,22 +98,51 @@
                 <div class="project-grid">
                     <!-- Office Projects -->
                     <div class="project-card" data-project="office1">
-                        <img src="project-office1.jpg" alt="Customer Risk Prediction" class="project-thumb" />
-                        <h4>Customer Risk Prediction</h4>
-                        <p>Developed and deployed ML models to Databricks endpoints for real-time customer risk prediction, improving underwriting efficiency.</p>
+                        <img src="project-office1.jpg" alt="Market Mix Modeling for Optimized Budget Allocation" class="project-thumb" />
+                        <h4>Market Mix Modeling for Optimized Budget Allocation</h4>
+                        <p>Developed a market mix model to optimize marketing budget allocation across channels, maximizing ROI and efficiency.</p>
                         <div class="project-tags">
                             <span>Python</span>
-                            <span>Databricks</span>
-                            <span>MLflow</span>
+                            <span>Azure ML Studio</span>
+                            <span>Regression</span>
                         </div>
                     </div>
                     <div class="project-card" data-project="office2">
-                        <img src="project-office2.jpg" alt="Market-Mix Modeling" class="project-thumb" />
-                        <h4>Market-Mix Modeling</h4>
-                        <p>Prepared end-to-end solutions in Azure ML Studio for market-mix modeling and dynamic pricing for price optimization.</p>
+                        <img src="project-office2.jpg" alt="Dynamic Pricing for Optimizing Pricing Strategy" class="project-thumb" />
+                        <h4>Dynamic Pricing for Optimizing Pricing Strategy</h4>
+                        <p>Implemented dynamic pricing models to optimize product pricing strategies, increasing revenue and market competitiveness.</p>
                         <div class="project-tags">
+                            <span>Python</span>
                             <span>Azure ML Studio</span>
-                            <span>Regression</span>
+                            <span>Pricing</span>
+                        </div>
+                    </div>
+                    <div class="project-card" data-project="office3">
+                        <img src="project-office3.jpg" alt="Predicting Optimal Channel for New Product Launch" class="project-thumb" />
+                        <h4>Predicting Optimal Channel for New Product Launch</h4>
+                        <p>Built predictive models to identify the most effective marketing channels for launching new products, improving launch success rates.</p>
+                        <div class="project-tags">
+                            <span>Python</span>
+                            <span>Classification</span>
+                            <span>Databricks</span>
+                        </div>
+                    </div>
+                    <div class="project-card" data-project="office4">
+                        <img src="project-office4.jpg" alt="AI Agent for Content Inventory Exploration" class="project-thumb" />
+                        <h4>POC: AI Agent for Content Inventory Exploration</h4>
+                        <p>Developed a proof-of-concept AI agent to help the Content Development Team explore and analyze content inventory efficiently.</p>
+                        <div class="project-tags">
+                            <span>AI Agent</span>
+                            <span>Content Team</span>
+                        </div>
+                    </div>
+                    <div class="project-card" data-project="office5">
+                        <img src="project-office5.jpg" alt="AI Agent for Reporting to Client" class="project-thumb" />
+                        <h4>POC: AI Agent for Reporting to Client</h4>
+                        <p>Created a proof-of-concept AI agent for the Ops Team to automate and streamline client reporting processes.</p>
+                        <div class="project-tags">
+                            <span>AI Agent</span>
+                            <span>Ops Team</span>
                         </div>
                     </div>
                 </div>
@@ -123,22 +152,49 @@
                 <div class="project-grid">
                     <!-- Self-Learning Projects -->
                     <div class="project-card" data-project="self1">
-                        <img src="project-self1.jpg" alt="Traffic Sign Classification" class="project-thumb" />
-                        <h4>Traffic Sign Classification</h4>
-                        <p>Designed and implemented a deep learning pipeline using CNNs to classify traffic signs from image datasets.</p>
+                        <img src="project-self1.jpg" alt="Market Mix Modeling" class="project-thumb" />
+                        <h4>Market Mix Modeling</h4>
+                        <p>Built a market mix model to analyze and optimize marketing spend across multiple channels for improved ROI.</p>
                         <div class="project-tags">
                             <span>Python</span>
-                            <span>Deep Learning</span>
-                            <span>CNN</span>
+                            <span>Marketing Analytics</span>
                         </div>
                     </div>
                     <div class="project-card" data-project="self2">
-                        <img src="project-self2.jpg" alt="Uplift Modeling for Marketing" class="project-thumb" />
-                        <h4>Uplift Modeling for Marketing</h4>
-                        <p>Implemented uplift modeling techniques to predict the incremental impact of marketing strategies for personalized campaigns.</p>
+                        <img src="project-self2.jpg" alt="Water Profiling Score Project" class="project-thumb" />
+                        <h4>Water Profiling Score Project</h4>
+                        <p>Developed a scoring system to profile water quality using data analysis and machine learning techniques.</p>
                         <div class="project-tags">
                             <span>Python</span>
-                            <span>Uplift Modeling</span>
+                            <span>Data Science</span>
+                        </div>
+                    </div>
+                    <div class="project-card" data-project="self3">
+                        <img src="project-self3.jpg" alt="Book Recommendation (RAG Chain)" class="project-thumb" />
+                        <h4>Book Recommendation (RAG Chain)</h4>
+                        <p>Implemented a book recommendation system using Retrieval-Augmented Generation (RAG) and NLP techniques.</p>
+                        <div class="project-tags">
+                            <span>Python</span>
+                            <span>RAG</span>
+                            <span>NLP</span>
+                        </div>
+                    </div>
+                    <div class="project-card" data-project="self4">
+                        <img src="project-self4.jpg" alt="Customer Churn Prediction" class="project-thumb" />
+                        <h4>Customer Churn Prediction</h4>
+                        <p>Created predictive models to identify customers at risk of churning, enabling targeted retention strategies.</p>
+                        <div class="project-tags">
+                            <span>Python</span>
+                            <span>Classification</span>
+                        </div>
+                    </div>
+                    <div class="project-card" data-project="self5">
+                        <img src="project-self5.jpg" alt="Customer Purchase Behavior" class="project-thumb" />
+                        <h4>Customer Purchase Behavior</h4>
+                        <p>Analyzed and modeled customer purchase patterns to uncover insights and drive business growth.</p>
+                        <div class="project-tags">
+                            <span>Python</span>
+                            <span>EDA</span>
                         </div>
                     </div>
                 </div>
