--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div class="nav-content">
             <a href="#home" class="nav-logo">
                 <span class="logo-name">Data Scientce Portfolio</span>
+                <button class="nav-toggle" aria-label="Toggle navigation">
+                    <span class="hamburger"></span>
+                </button>
+
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
