--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="project-grid">
                     <!-- Office Projects -->
                     <div class="project-card" data-project="office1">
-                        <img src="assets\7.png" alt="Market Mix Modeling for Optimized Budget Allocation" class="project-thumb" />
+                        <img src="assets\project-office1.png" alt="Market Mix Modeling for Optimized Budget Allocation" class="project-thumb" />
                         <h4>Market Mix Modeling for Optimized Budget Allocation</h4>
                         <p>Developed a market mix model to optimize marketing budget allocation across channels, maximizing ROI and efficiency.</p>
                         <div class="project-tags">
@@ -144,18 +144,8 @@
                             <span>Regression</span>
                         </div>
                     </div>
-                    <div class="project-card" data-project="office2">
-                        <img src="assets\project-office2.png" alt="Dynamic Pricing for Optimizing Pricing Strategy" class="project-thumb" />
-                        <h4>Dynamic Pricing for Optimizing Pricing Strategy</h4>
-                        <p>Implemented dynamic pricing models to optimize product pricing strategies, increasing revenue and market competitiveness.</p>
-                        <div class="project-tags">
-                            <span>Python</span>
-                            <span>Azure ML Studio</span>
-                            <span>Pricing</span>
-                        </div>
-                    </div>
                     <div class="project-card" data-project="office3">
-                        <img src="project-office3.jpg" alt="Predicting Optimal Channel for New Product Launch" class="project-thumb" />
+                        <img src="assets\project-office3.png" alt="Predicting Optimal Channel for New Product Launch" class="project-thumb" />
                         <h4>Predicting Optimal Channel for New Product Launch</h4>
                         <p>Built predictive models to identify the most effective marketing channels for launching new products, improving launch success rates.</p>
                         <div class="project-tags">
@@ -173,6 +163,16 @@
                             <span>Content Team</span>
                         </div>
                     </div>
+                    <div class="project-card" data-project="office2">
+                        <img src="assets\project-office2.png" alt="Dynamic Pricing for Optimizing Pricing Strategy" class="project-thumb" />
+                        <h4>Dynamic Pricing for Optimizing Pricing Strategy</h4>
+                        <p>Implemented dynamic pricing models to optimize product pricing strategies, increasing revenue and market competitiveness.</p>
+                        <div class="project-tags">
+                            <span>Python</span>
+                            <span>Azure ML Studio</span>
+                            <span>Pricing</span>
+                        </div>
+                    </div>
                     <div class="project-card" data-project="office5">
                         <img src="assets\project-office5.png" alt="AI Agent for Reporting to Client" class="project-thumb" />
                         <h4>POC: AI Agent for Reporting to Client</h4>
@@ -182,6 +182,17 @@
                             <span>Ops Team</span>
                         </div>
                     </div>
+                    <div class="project-card" data-project="office6">
+                        <img src="assets\project-office6.png" alt="Health Insurance Risk Assessment" class="project-thumb" />
+                        <h4>Health Insurance Risk Assessment</h4>
+                        <p>Developed a machine learning model to assess customer risk profiles in health insurance, improving underwriting efficiency and accuracy.</p>
+                        <div class="project-tags">
+                            <span>Python</span>
+                            <span>Classification</span>
+                            <span>Databricks</span>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
             <div class="project-subsection">
@@ -189,7 +200,7 @@
                 <div class="project-grid">
                     <!-- Self-Learning Projects -->
                     <div class="project-card" data-project="self1">
-                        <img src="assets/8.png" alt="Market Mix Modeling" class="project-thumb" />
+                        <img src="assets/project-self1.png" alt="Market Mix Modeling" class="project-thumb" />
                         <h4>Market Mix Modeling</h4>
                         <p>Built a market mix model to analyze and optimize marketing spend across multiple channels for improved ROI.</p>
                         <div class="project-tags">
@@ -198,7 +209,7 @@
                         </div>
                     </div>
                     <div class="project-card" data-project="self2">
-                        <img src="project-self2.jpg" alt="Water Profiling Score Project" class="project-thumb" />
+                        <img src="assets/project-self2.png" alt="Water Profiling Score Project" class="project-thumb" />
                         <h4>Water Profiling Score Project</h4>
                         <p>Developed a scoring system to profile water quality using data analysis and machine learning techniques.</p>
                         <div class="project-tags">
@@ -217,7 +228,7 @@
                         </div>
                     </div>
                     <div class="project-card" data-project="self4">
-                        <img src="project-self4.jpg" alt="Customer Churn Prediction" class="project-thumb" />
+                        <img src="assets\project-self4.png" alt="Customer Churn Prediction" class="project-thumb" />
                         <h4>Customer Churn Prediction</h4>
                         <p>Created predictive models to identify customers at risk of churning, enabling targeted retention strategies.</p>
                         <div class="project-tags">
@@ -226,7 +237,7 @@
                         </div>
                     </div>
                     <div class="project-card" data-project="self5">
-                        <img src="project-self5.jpg" alt="Customer Purchase Behavior" class="project-thumb" />
+                        <img src="assets/project-self5.png" alt="Customer Purchase Behavior" class="project-thumb" />
                         <h4>Customer Purchase Behavior</h4>
                         <p>Analyzed and modeled customer purchase patterns to uncover insights and drive business growth.</p>
                         <div class="project-tags">
