--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <img src="assets\profile.jpeg" alt="Shuchismita Mallick" />
                 </div>
               <h2 class="hero-title">Data Scientist</h2>
-              <a href="assets\Shuchismita_Mallick_Resume.pdf" download class="btn-download">Download Resume</a>
+              <a href="assets/Shuchismita_Mallick_Data_Scientist_AI_ML.pdf" download class="btn-download">Download Resume</a>
             </div>
       
           <!-- Middle: Greeting and Text -->
