--- a/index.html
+++ b/index.html
@@ -134,16 +134,17 @@
                 <h3 class="project-subheading">Impactful Projects Delivered at Work</h3>
                 <div class="project-grid">
                     <!-- Office Projects -->
-                    <div class="project-card" data-project="office1">
-                        <img src="assets\project-office1.png" alt="Market Mix Modeling for Optimized Budget Allocation" class="project-thumb" />
-                        <h4>Market Mix Modeling for Optimized Budget Allocation</h4>
-                        <p>Developed a market mix model to optimize marketing budget allocation across channels, maximizing ROI and efficiency.</p>
+                    <div class="project-card" data-project="office6">
+                        <img src="assets\project-office6.png" alt="Predictive Maintenance for Manufacturing Equipment" class="project-thumb" />
+                        <h4>Autonomous Agentic AI Solution for Healthcare</h4>
+                        <p>Developed an autonomous agentic AI solution for healthcare that automates data retrieval and generates real-time insights to enhance decision-making and operational efficiency for hospital staff.</p>
                         <div class="project-tags">
                             <span>Python</span>
+                            <span>Time Series</span>
                             <span>Azure ML Studio</span>
-                            <span>Regression</span>
                         </div>
                     </div>
+
                     <div class="project-card" data-project="office3">
                         <img src="assets\project-office3.png" alt="Predicting Optimal Channel for New Product Launch" class="project-thumb" />
                         <h4>Predicting Optimal Channel for New Product Launch</h4>
@@ -180,6 +181,16 @@
                         <div class="project-tags">
                             <span>AI Agent</span>
                             <span>Ops Team</span>
+                        </div>
+                    </div>
+                    <div class="project-card" data-project="office1">
+                        <img src="assets\project-office1.png" alt="Market Mix Modeling for Optimized Budget Allocation" class="project-thumb" />
+                        <h4>Market Mix Modeling for Optimized Budget Allocation</h4>
+                        <p>Developed a market mix model to optimize marketing budget allocation across channels, maximizing ROI and efficiency.</p>
+                        <div class="project-tags">
+                            <span>Python</span>
+                            <span>Azure ML Studio</span>
+                            <span>Regression</span>
                         </div>
                     </div>
                     
