--- a/index.html
+++ b/index.html
@@ -74,9 +74,40 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project-subsection">
-                <h3 class="project-subheading">Impactful Projects Delivered at Work</h3>
+                <h3 class="project-subheading">Impactful Projects Delivered at Work in Fractal Analytics</h3>
                 <div class="project-grid">
-                    <!-- Office Projects -->
+                    <!-- Fractal Office Projects -->
+                    <div class="project-card" data-project="fmcg1">
+                        <img src="assets/project-leadscoring.png" alt="Customer Journey Optimization Lead Scoring Model" class="project-thumb" />
+                        <h4>Customer Journey Optimization – Lead Scoring Model</h4>
+                        <p>Designed and deployed a machine learning-based lead scoring model on Databricks for a global FMCG enterprise across South Africa, Indonesia, and Egypt. Optimized customer journey touchpoints by identifying high-conversion prospects and enabling data-driven marketing strategies across multiple emerging markets.</p>
+                        <div class="project-tags">
+                            <span>Databricks</span>
+                            <span>PySpark</span>
+                            <span>Machine Learning</span>
+                            <span>Customer Analytics</span>
+                            <span>Feature Engineering</span>
+                        </div>
+                    </div>
+                    <div class="project-card" data-project="fmcg2">
+                        <img src="assets/project-forecasting.png" alt="Time Series Sales Forecasting Optimization" class="project-thumb" />
+                        <h4>Advanced Time Series Sales Forecasting</h4>
+                        <p>Enhanced univariate and multivariate time series models to forecast dollar sales, equivalent sales, and unit sales for a multinational consumer goods leader in North America. Improved forecast accuracy through advanced statistical modeling and feature optimization to support demand planning and revenue strategy.</p>
+                        <div class="project-tags">
+                          <span>Time Series</span>
+                          <span>ARIMA / SARIMA</span>
+                          <span>Multivariate Modeling</span>
+                         <span>Databricks</span>
+                         <span>Forecasting</span>
+                        </div>
+                    </div>
+             
+                </div>
+            </div>
+            <div class="project-subsection">
+                <h3 class="project-subheading">Impactful Projects Delivered at Work in Enqurious</h3>
+                <div class="project-grid">
+                    <!-- Enqurious Office Projects -->
                     <div class="project-card" data-project="office6">
                         <img src="assets\project-office6.png" alt="Predictive Maintenance for Manufacturing Equipment" class="project-thumb" />
                         <h4>Autonomous Agentic AI Solution for Healthcare</h4>
@@ -212,9 +243,24 @@
                 <div class="timeline-item animate-fadein">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
+                        <h3>Data Scientist <span class="company">Fractal Analytics</span></h3>
+                        <div class="exp-meta">
+                            <span><i class="fas fa-calendar-alt"></i> Aug'25 – Present</span>
+                            <span><i class="fas fa-map-marker-alt"></i> Gurgaon, India</span>
+                        </div>
+                        <div class="exp-tech"><strong>Tech Stack:</strong> <span>Python, Pyspark, Regression, Time Series Forecasting, Azure Databricks</span></div>
+                        <ul class="exp-bullets">
+                            <li>Customer Journey Optimization – Lead Scoring Model:Designed a lead scoring model in Databricks for a Fortune 500 global FMCG company across South Africa, Indonesia, and Egypt.</li> 
+                            <li>Improved univariate and multivariate time series forecasting models to predict dollar sales, equivalent sales, and unit sales for a Fortune 500 global FMCG enterprise in North America.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item animate-fadein">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
                         <h3>Data Scientist <span class="company">Enquorious</span></h3>
                         <div class="exp-meta">
-                            <span><i class="fas fa-calendar-alt"></i> July'23 – Present</span>
+                            <span><i class="fas fa-calendar-alt"></i> July'23 – July'25</span>
                             <span><i class="fas fa-map-marker-alt"></i> Bangalore, India – WFH</span>
                         </div>
                         <div class="exp-tech"><strong>Tech Stack:</strong> <span>Python, SQL, Regression, Classification, MLops, Azure Databricks, Azure ML Studio, Azure AI Foundry</span></div>
