--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -308,74 +309,27 @@
             </div>
         </div>
     </section>
-    <section id="experience" class="experience">
+    <section id="education" class="education">
         <div class="container">
-            <h2>Experience</h2>
+            <h2>Education</h2>
             <div class="timeline">
                 <div class="timeline-item animate-fadein">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Data Scientist <span class="company">Fractal Analytics</span></h3>
+                        <h3>M.Sc. IT(Aritificial Intelligence) <span class="company">West Bengal University of Technology</span></h3>
                         <div class="exp-meta">
-                            <span><i class="fas fa-calendar-alt"></i> Aug'25 – Present</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Gurgaon, India</span>
+                            <span><i class="fas fa-calendar-alt"></i> Oct'2020 – Jun'2022</span>
+                            <span><i class="fas fa-map-marker-alt"></i> West Bengal, India</span>
                         </div>
-                        <div class="exp-tech"><strong>Tech Stack:</strong> <span>Python, Pyspark, Regression, Time Series Forecasting, Azure Databricks</span></div>
-                        <ul class="exp-bullets">
-                            <li>Customer Journey Optimization – Lead Scoring Model:Designed a lead scoring model in Databricks for a Fortune 500 global FMCG company across South Africa, Indonesia, and Egypt.</li> 
-                            <li>Improved univariate and multivariate time series forecasting models to predict dollar sales, equivalent sales, and unit sales for a Fortune 500 global FMCG enterprise in North America.</li>
-                        </ul>
-                    </div>
                 </div>
                 <div class="timeline-item animate-fadein">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Data Scientist <span class="company">Enquorious</span></h3>
+                        <h3>B.Sc. Hons. Mathematics <span class="company">Hooghly Mohsin College</span></h3>
                         <div class="exp-meta">
-                            <span><i class="fas fa-calendar-alt"></i> July'23 – July'25</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Bangalore, India – WFH</span>
+                            <span><i class="fas fa-calendar-alt"></i> Aug'2017 – Oct'2020</span>
+                            <span><i class="fas fa-map-marker-alt"></i> West Bengal, India</span>
                         </div>
-                        <div class="exp-tech"><strong>Tech Stack:</strong> <span>Python, SQL, Regression, Classification, MLops, Azure Databricks, Azure ML Studio, Azure AI Foundry</span></div>
-                        <ul class="exp-bullets">
-                            <li>Led the creation and execution of data science projects, constructing proofs of concept (POC) tailored for EdTech solutions and mentoring aspiring decision scientists.</li>
-                            <li>Conducted data analysis and used statistical models and machine learning techniques to evaluate channel effectiveness and develop strategies for redistributing budgets, maximizing sales, and profitability.</li>
-                            <li> Developed and deployed machine learning models to Databricks endpoints for real-time customer risk prediction.</li>
-                            <li>Prepared end-to-end solutions in Azure ML Studio, focusing on Market-mix modeling, dynamic pricing for price optimization, and optimal channel prediction for new product launches.</li>
-                            <li>Developed Agentic-RAG Chat-bot utilizing AzureAIFoundry,AI Search, connecting with Unity Catalog in the Health Care domain based on Non-clinical Metrics, whose dataset was curated by me</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="timeline-item animate-fadein" style="animation-delay:0.1s;">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>Data Analyst <span class="company">Enquorious</span></h3>
-                        <div class="exp-meta">
-                            <span><i class="fas fa-calendar-alt"></i> July'22 – June'23</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Bangalore, India – WFH</span>
-                        </div>
-                        <div class="exp-tech"><strong>Tech Stack:</strong> <span>Python, SQL, PowerBI</span></div>
-                        <ul class="exp-bullets">
-                            <li>Created multiple data analysis projects in Python, SQL, and Power BI across various domains to address the company's needs.</li>
-                            <li>Conducted live sessions with clients to deliver hands-on learning experiences, enabling them to enhance their skills effectively.</li>
-                            <li>Designed and implemented deep learning models with a computer vision pipeline using CNNs to classify traffic signs from image datasets, advancing automated driving systems.</li>
-                            <li>Implemented uplift modeling techniques to predict the incremental impact of marketing strategies, enabling personalized campaigns by identifying customers likely to respond positively.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="timeline-item animate-fadein" style="animation-delay:0.2s;">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>Data Analyst Intern <span class="company">Enquorious</span></h3>
-                        <div class="exp-meta">
-                            <span><i class="fas fa-calendar-alt"></i> April'22 – June'22</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Bangalore, India – WFH</span>
-                        </div>
-                        <div class="exp-tech"><strong>Tech Stack:</strong> <span>Python, SQL</span></div>
-                        <ul class="exp-bullets">
-                            <li>Conducted live sessions with clients by creating hands-on projects in Python and MySQL, fostering an interactive and practical learning experience.</li>
-                            <li>Designed scenarios based on e-commerce and sports domains to enhance client understanding of data processing and wrangling techniques.</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
